--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         </header>
         <main>
             <section>
-                <p>EFFECTIVE SOLUTIONS</p>
-                <p>YOUR BUSINESS</p>
+                <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
                 <button type="button">Request Our Service</button>
             </section>
             <section>
@@ -55,32 +54,34 @@
             </section>
             <section>
                 <h2>What we do</h2>
-                <img src="images/wwd1.png" alt="what we do image 1" width="370px" />
-                <img src="images/wwd2.png" alt="what we do image 2" width="370px" />
-                <img src="images/wwd3.png" alt="what we do image 3" width="370px" />
+                <img src="images/wwd1.jpg" alt="what we do image 1" width="370px" />
+                <img src="images/wwd2.jpg" alt="what we do image 2" width="370px" />
+                <img src="images/wwd3.jpg" alt="what we do image 3" width="370px" />
             </section>
             <section>
                 <h2>Our Team</h2>
-                <div>
+				<ul>
+                <li>
                     <img src="images/team/chrisw.jpg" alt="image of Chris" width="270px" />
                     <p>Christopher Walker</p>
                     <p>Product Designer</p>
-                </div>
-                <div>
+                </li>
+                <li>
                     <img src="images/team/kyliee.jpg" alt="image of Kylie" width="270px" />
                     <p>Kylie Evans</p>
                     <p>Frontend Developer</p>
-                </div>
-                <div>
+                </li>
+                <li>
                     <img src="images/team/ryanh.jpg" alt="image of Ryan" width="270px" />
                     <p>Ryan Harris</p>
                     <p>Marketing</p>
-                </div>
-                <div>
+                </li>
+                <li>
                     <img src="images/team/tylerm.jpg" alt="image of Tyler" width="270px" />
                     <p>Tyler Moore</p>
                     <p>UI Designer</p>
-                </div>
+                </li>
+				</ul>
             </section>
         </main>
         <footer>
