--- a/index.html
+++ b/index.html
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <p>
-                    <a>WebStudio</a>
-                </p>
-                <ul>
-                    <li>
-                        <a href="https://google.com">Studio</a>
-                    </li>
-                    <li>
-                        <a href="https://google.com">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="https://google.com">Contacts</a>
-                    </li>
-                </ul>
-            </nav>
-            <a href="https://google.com">info@devstudio.com</a>
-            <a href="https://google.com">+38 096 111 11 11</a>
-        </header>
-        <main>
-            <section>
-                <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-                <button type="button">Request Our Service</button>
-            </section>
-            <section>
-			<ul>
-			<li>
-                <h3>ATTENTION TO DETAILS</h3>
-                <p>
-                    We go into all the details and processes of your business 
-                    to develop a customized solution.
-                </p>
-				</li>
-				<li>
-                <h3>PUNCTUALITY</h3>
-                <p>
-                    With us, you can feel safe and secure., An important 
-                    principle of the company: respect your time and respect 
-                    the agreed deadlines.
-                </p>
-				</li>
-				<li>
-                <h3>PLANNING</h3>
-                <p>
-                    You will be able to observe and participate in every 
-                    phase of solution development and implementation.
-                </p>
-				</li>
-				<li>
-                <h3>MODERN TECHNOLOGIES</h3>
-                <p>
-                    We use innovative tools to solve assigned tasks. 
-                    It's time to simplify work processes.
-                </p>
-				</li>
-				</ul>
-            </section>
-            <section>
-                <h2>What we do</h2>
-                <img src="images/wwd1.jpg" alt="what we do image 1" width="370px" />
-                <img src="images/wwd2.jpg" alt="what we do image 2" width="370px" />
-                <img src="images/wwd3.jpg" alt="what we do image 3" width="370px" />
-            </section>
-            <section>
-                <h2>Our Team</h2>
-				<ul>
+
+<head>
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <p>
+                <a>WebStudio</a>
+            </p>
+            <ul>
+                <li>
+                    <a href="https://google.com">Studio</a>
+                </li>
+                <li>
+                    <a href="https://google.com">Portfolio</a>
+                </li>
+                <li>
+                    <a href="https://google.com">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="https://google.com">info@devstudio.com</a>
+        <a href="https://google.com">+38 096 111 11 11</a>
+    </header>
+    <main>
+        <section>
+            <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+            <button type="button">Request Our Service</button>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <h3>ATTENTION TO DETAILS</h3>
+                    <p>
+                        We go into all the details and processes of your business to develop a customized solution.
+                    </p>
+                </li>
+                <li>
+                    <h3>PUNCTUALITY</h3>
+                    <p>
+                        With us, you can feel safe and secure., An important principle of the company: respect your time and respect the agreed deadlines.
+                    </p>
+                </li>
+                <li>
+                    <h3>PLANNING</h3>
+                    <p>
+                        You will be able to observe and participate in every phase of solution development and implementation.
+                    </p>
+                </li>
+                <li>
+                    <h3>MODERN TECHNOLOGIES</h3>
+                    <p>
+                        We use innovative tools to solve assigned tasks. It's time to simplify work processes.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>What we do</h2>
+            <img src="images/wwd1.jpg" alt="what we do image 1" width="370px" />
+            <img src="images/wwd2.jpg" alt="what we do image 2" width="370px" />
+            <img src="images/wwd3.jpg" alt="what we do image 3" width="370px" />
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
                 <li>
                     <img src="images/team/chrisw.jpg" alt="image of Chris" width="270px" />
                     <p>Christopher Walker</p>
@@ -91,25 +88,26 @@
                     <p>Tyler Moore</p>
                     <p>UI Designer</p>
                 </li>
-				</ul>
-            </section>
-        </main>
-        <footer>
-            <div>
-                <p>
-                    </a>WebStudio</a>
-                </p>
-                <address>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <p>
+                </a>WebStudio</a>
+            </p>
+            <address>
                     695 Park Ave, New York, NY 10065
                     United States
                 </address>
-                <p>
-                    info@example.com
-                </p>
-                <p>
-                    +1 212-772-4150
-                </p>
-            </div>
-        </footer>
-    </body>
+            <p>
+                info@example.com
+            </p>
+            <p>
+                +1 212-772-4150
+            </p>
+        </div>
+    </footer>
+</body>
+
 </html>
